# SPS-Backend

./: .gitignore  Cargo.toml  README.md  config.toml  update_deployment.sh
.github/workflows/: coverage.yml  main.yml  rust.yml
sql/: create_database.sql  populate_database.sql  test_db_setup.sql  user_access.sql
src/: db.rs  endpoints.rs  main.rs
src/endpoints/: account.rs  auth.rs  errors.rs  events.rs  notes.rs  rotations.rs  security.rs  staff.rs  tests.rs
src/endpoints/account/: manage.rs  password.rs  security_question.rs  tests.rs
src/endpoints/auth/: credentials.rs  otp.rs  security_questions.rs  session_token.rs  tests.rs
src/endpoints/events/: event_api.rs  event_file.rs  tests.rs
src/endpoints/notes/: note_api.rs  note_files.rs  tests.rs
src/endpoints/rotations/: rotation_api.rs  rotation_files.rs  tests.rs
src/endpoints/security/: tests.rs
src/endpoints/staff/: tests.rs
src/sps/: auth.rs
src/sps/auth/: account.rs  session_token.rs  tests.rs
