[package]
name = "sps-be"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
config = "0.13.3"
lazy_static = "1.4.0"
log = "0.4.17"
rocket = "=0.5.0-rc.3"
serde = "1.0.158"
simple_logger = "4.1.0"
systemd-journal-logger = "0.7.0"
tokio = { version = "1.26.0", features = ["sync"] }
